          relations that are present on superclasses when using
          inheritance.

    - Fixed order_by calculation in Query to properly alias
      mapper-config'ed order_by when using select_from()

    - Refactored the diffing logic that kicks in when replacing
      one collection with another into collections.bulk_replace,
      useful to anyone building multi-level collections.

- sql
    - Schema-qualified tables now will place the schemaname
      ahead of the tablename in all column expressions as well
      as when generating column labels.  This prevents cross-
      schema name collisions in all cases [ticket:999]

    - Can now allow selects which correlate all FROM clauses and
      have no FROM themselves.  These are typically used in a
      scalar context, i.e. SELECT x, (SELECT x WHERE y) FROM
      table.  Requires explicit correlate() call.

    - 'name' is no longer a required constructor argument for
      Column().  It (and .key) may now be deferred until the
      column is added to a Table.

    - like(), ilike(), contains(), startswith(), endswith() take
      an optional keyword argument "escape=<somestring>", which
      is set as the escape character using the syntax "x LIKE y
      ESCAPE '<somestring>'" [ticket:993], [ticket:791]

    - random() is now a generic sql function and will compile to
      the database's random implementation, if any.

    - update().values() and insert().values() take keyword 
      arguments.

    - Fixed an issue in select() regarding its generation of FROM
      clauses, in rare circumstances two clauses could be produced
      when one was intended to cancel out the other.  Some ORM
      queries with lots of eager loads might have seen this
      symptom.

- declarative extension
    - The "synonym" function is now directly usable with
      "declarative".  Pass in the decorated property using the
      "descriptor" keyword argument, e.g.: somekey =